--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Weekend Project Week 1</title>
+    <script src="script.js"></script>
   </head>
   <body>
     <h1> Salary Calculator </h1>
@@ -18,6 +19,6 @@
       Annual Salary:
       <input type="text" name ="salary"><br>
     </form>
-      <button onClick ="do something">Submit Employee Information</button>
+      <button id="submit" onClick ="submitEmp()">Submit Employee Information</button>
   </body>
 </html>
