--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <h1> Salary Calculator </h1>
     <form>
       Employee First Name:
-      <input type="text" name ="firstname"><br>
+      <input type="text" id ="firstname"><br>
       Employee Last Name:
-      <input type="text" name ="lastname"><br>
+      <input type="text" id ="lastname"><br>
       ID Number:
-      <input type="text" name ="idnumber"><br>
+      <input type="text" id ="idnumber"><br>
       Job Title:
-      <input type="text" name ="jobtitle"><br>
+      <input type="text" id ="jobtitle"><br>
       Annual Salary:
-      <input type="text" name ="salary"><br>
+      <input type="text" id ="salary"><br>
     </form>
-      <button id="submit" onClick ="submitEmp()">Submit Employee Information</button>
+      <button id="submit" onClick ="addEmp()">Submit Employee Information</button>
   </body>
 </html>
