--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1> Salary Calculator </h1>
-    <form>
+    <form id="employeeInput">
       Employee First Name:
       <input type="text" id ="firstname"><br>
       Employee Last Name:
