Add employee info to DOM on button click

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
       <input type="text" id ="salary"><br>
     </form>
       <button id="submit" onClick ="addEmp()">Submit Employee Information</button>
+      <div id="employeeResult">
+      </div>
   </body>
 </html>
