--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <script src="script.js"></script>
   </head>
-  <body>
+  <body onload="setFocus()">
     <div class="calculator">
     <h1> Employee Salary Calculator </h1>
     <div class="submitForm">
